anjali push tha code

--- a/student.html
+++ b/student.html
@@ -152,7 +152,7 @@
                             <div class="col-lg-6 col-md-6 text-center">
                                 <div class="right-card position-relative mx-auto">
                                     <img
-                                        src="assets/image/study/Group 238.png"
+                                        src="assets/image/student/gg.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -171,7 +171,7 @@
                 <!-- Item 1 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets/image/study/Group 253.svg" alt="Universal Access" class="img-fluid-1">
+                        <img src="assets/image/student/g4.png" alt="Universal Access" class="img-fluid-1">
                     </div>
                     <h5 class="info-title mt-3">User Privacy</h5>
                     <p class="info-desc">
@@ -182,7 +182,7 @@
                 <!-- Item 2 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets/image/study/Group.svg" alt="Batch-Wide Consistency" class="img-fluid-2">
+                        <img src="assets/image/student/g2.png" alt="Batch-Wide Consistency" class="img-fluid-2">
                     </div>
                     <h5 class="info-title mt-3">Customized Information</h5>
                     <p class="info-desc">
@@ -193,7 +193,7 @@
                 <!-- Item 3 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets//image/study/XMLID_1031_.svg" alt="Time Saving" class="img-fluid-3">
+                        <img src="assets/image/student/g1.png" alt="Time Saving" class="img-fluid-3">
                     </div>
                     <h5 class="info-title mt-3">Timely Communication</h5>
                     <p class="info-desc">
@@ -217,7 +217,7 @@
                 <!-- Feature 1 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group1.svg" alt="Document Upload">
+                        <img src="assets/image/student/key.png" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Separate Access</h4>
@@ -230,7 +230,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group2.svg" alt="Centralized Platform">
+                        <img src="assets/image/student/vector2.png" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Personalized Experience</h4>
@@ -243,7 +243,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 428.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/student/g4.png" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Data Security</h4>
@@ -261,7 +261,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card">
                           <img
-                                        src="assets/image/study/easyshare.png"
+                                        src="assets/image/student/img.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -284,7 +284,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card" style="">
                           <img
-                                        src="assets/image/study/Group 384.png"
+                                        src="assets/image/student/leftg.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -299,7 +299,7 @@
                 </h2>
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 417.svg" alt="Document Upload">
+                        <img src="assets/image/student/g12.png" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Instant CommunicationFolder Creation</h4>
@@ -312,7 +312,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 414.svg" alt="Centralized Platform">
+                        <img src="assets/image/student/g11.png" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Unlimited Messaging</h4>
@@ -325,7 +325,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 416.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/student/g13.png" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Important Updates</h4>
@@ -353,7 +353,7 @@
                 <!-- Feature 1 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/group51.svg" alt="Document Upload">
+                        <img src="assets/image/student/ng2.png" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Accessible Schedule</h4>
@@ -366,7 +366,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group52.svg" alt="Centralized Platform">
+                        <img src="assets/image/student/ng1.png" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Real-Time Updates</h4>
@@ -379,7 +379,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group53.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/student/ng3.png" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Reminders</h4>
@@ -397,7 +397,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card">
                           <img
-                                        src="assets/image/study/Group 402.png"
+                                        src="assets/image/student/ng.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -420,7 +420,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card" style="">
                           <img
-                                        src="assets/image/study/Group 384.png"
+                                        src="assets/image/student/ng11.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -435,7 +435,7 @@
                 </h2>
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 417.svg" alt="Document Upload">
+                        <img src="assets/image/student/ng22.png" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Digital Repository</h4>
@@ -448,7 +448,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 414.svg" alt="Centralized Platform">
+                        <img src="assets/image/student/ng33.png" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Easy Access</h4>
@@ -461,7 +461,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 416.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/student/ng44.png" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Organized Learning</h4>
