--- a/biometric.html
+++ b/biometric.html
@@ -149,7 +149,7 @@
                             <div class="col-lg-6 col-md-6 text-center">
                                 <div class="right-card position-relative mx-auto">
                                     <img
-                                        src="assets/image/homework/Group 235.png"
+                                        src="assets/image/biometrix/Group 230.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -168,7 +168,7 @@
                 <!-- Item 1 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets/image/homework/Group66.svg" alt="Universal Access" class="img-fluid-1">
+                        <img src="assets/image/biometrix/g1.png" alt="Universal Access" class="img-fluid-1">
                     </div>
                     <h5 class="info-title mt-3">Accuracy</h5>
                     <p class="info-desc">
@@ -179,7 +179,7 @@
                 <!-- Item 2 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets/image/homework/group67.svg" alt="Batch-Wide Consistency" class="img-fluid-2">
+                        <img src="assets/image/biometrix/g2.png" alt="Batch-Wide Consistency" class="img-fluid-2">
                     </div>
                     <h5 class="info-title mt-3">Convenience</h5>
                     <p class="info-desc">
@@ -190,7 +190,7 @@
                 <!-- Item 3 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets//image/homework/Group 419.svg" alt="Time Saving" class="img-fluid-3">
+                        <img src="assets/image/biometrix/g3.png" alt="Time Saving" class="img-fluid-3">
                     </div>
                     <h5 class="info-title mt-3">Real-Time Monitoring</h5>
                     <p class="info-desc">
@@ -214,7 +214,7 @@
                 <!-- Feature 1 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s1.svg" alt="Document Upload">
+                        <img src="assets/image/biometrix/g11.png" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Enrollment</h4>
@@ -227,7 +227,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s2.svg" alt="Centralized Platform">
+                        <img src="assets/image/biometrix/g12.png" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Attendance Marking</h4>
@@ -240,7 +240,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s3.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/biometrix/g13.png" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Secure Authentication</h4>
@@ -258,7 +258,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card">
                           <img
-                                        src="assets/image/homework/Group 375.png"
+                                        src="assets/image/biometrix/Group 979.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -275,13 +275,13 @@
         <div class="row notes-row">
             <!-- LEFT COLUMN -->
              <!-- RIGHT COLUMN -->
-            <div class="col-lg-6 col-md-6 col-12 notes-right">
+            <div class="col-lg-5 col-md-6 col-12 notes-right">
                 
                 <div class="notes-image-box">
                     <!-- Background image applied from CSS -->
                     <div class="notes-card" style="">
                           <img
-                                        src="assets/image/homework/Group 208.png"
+                                        src="assets/image/biometrix/Group 980.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -289,14 +289,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-12 notes-left">
+            <div class="col-lg-7 col-md-6 col-12 notes-left">
                 <!-- Feature 1 -->
                  <h2 class="notes-heading text-start mb-5 mt-5">
                     Auto Biometric Attendance
                 </h2>
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s4.svg" alt="Document Upload">
+                        <img src="assets/image/biometrix/g21.png" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Seamless Tracking</h4>
@@ -309,7 +309,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s5.svg" alt="Centralized Platform">
+                        <img src="assets/image/biometrix/g22.png" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Elimination of Manual Effort</h4>
@@ -322,7 +322,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s6.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/biometrix/g23.png" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Accurate Records</h4>
